[metadata]
name = odbkicad
version = 0.0.1
description = odb kicad pakki
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odinndagur/odbkicad
author = Óðinn Dagur Bjarnason
author_email = odinnd@gmail.com
license = MIT

[options]
py_modules = odbkicad

[options.entry_points]
console_scripts =
  odbkicad = odbkicad:main

[bdist_wheel]
universal = True
